bug 627840 - (DirectWrite) only check for bitmaps in CJK fonts. r=masayuki a=joe